<resources>
    <string name="app_name">MyCompanion</string>

    <string name="bmi_text">BMI</string>
    <string name="pedometer_text">Pedometer</string>
    <string name="alarm_text">Alarm</string>
    <string name="profile_text">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weight">WEIGHT</string>
    <string name="height">HEIGHT</string>
    <string name="calculateBMI">calculateBMI</string>
    <string name="very_severely_underweight">Very severely underweight</string>
    <string name="severely_underweight">Severely underweight</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="obese_class_i">Obese class 1</string>
    <string name="obese_class_ii">Obese class 2</string>
    <string name="obese_class_iii">obese class 3</string>
    <string name="profile_title">Profile</string>
    <string name="Personal_info_profile">Update your personal information here</string>
    <string name="first_name_profile">First Name</string>
    <string name="last_name_profile">Last Name</string>
    <string name="email_profile">Email</string>
    <string name="birth_date_profile">Birth Date</string>
    <string name="height_profile">Height</string>
    <string name="weight_profile">Weight</string>
    <string name="save_changes_profile">Save changes</string>
    <string name="recalculate_your_bmi">RECALCULATE YOUR BMI</string>
    <string name="your_bmi_category_is">Your BMI Category Is</string>
    <string name="gender">Gender</string>
    <string name="pedometer_info">A study from JAVA NETWORK suggests that walking 7000 daily steps may go a long way toward better health. This is why the progress bar will be completed at 7000 steps. Do not worry if you do more, all your steps will be displayed !</string>
    <string name="info_title">Did you know ?</string>
    <string name="btn_reset">RESET</string>
    <string name="steps">Steps</string>
    <string name="stepsTaken0">0</string>
    <string name="copyright">©2022 Fabio Lima</string>
    <string name="my_health_companion">MY HEALTH COMPANION</string>
    <string name="cm">cm</string>
    <string name="_170">170</string>
    <string name="height_bmi">Height</string>
    <string name="_22">22</string>
    <string name="age_bmi">Age</string>
    <string name="_55">55</string>
    <string name="weight_bmi">Weight</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="calculate_your_bmi">Calculate Your BMI</string>
    <string name="password">PASSWORD</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="email">EMAIL</string>
    <string name="full_name">FULL NAME</string>
    <string name="register">REGISTER</string>
    <string name="set_a_reminder_to_drink">SET A REMINDER TO DRINK !</string>
    <string name="by_clicking_the_button_you_will_receive_a_notification_in_1_hour">By clicking the button, you will receive a notification in 1 hour.</string>
    <string name="_22">22</string>
    <string name="login">LOGIN</string>
    <string name="register_if_not_yet">Register</string>
    <string name="remind_me">REMIND ME !</string>
    <string name="Phone_profile">Phone</string>
</resources>