<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/adambolds"
        android:gravity="center_horizontal"
        android:text="@string/profile_title"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/adambolds"
        android:gravity="center_horizontal"
        android:text="@string/Personal_info_profile"
        android:textSize="15sp"
        android:textStyle="bold"/>


    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="170dp"
        android:hint="@string/first_name_profile" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="220dp"
        android:hint="@string/last_name_profile" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="270dp"
        android:hint="@string/email_profile" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="320dp"
        android:hint="@string/birth_date_profile" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="370dp"
        android:hint="@string/height_profile" />


    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="420dp"
        android:hint="@string/weight_profile" />

    <Button
        android:id="@+id/button_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="520dp"
        android:text="@string/save_changes_profile" />


</FrameLayout>