<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/background"
    tools:context=".bmiactivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="283dp"
        android:layout_height="158dp"
        android:layout_above="@id/contentlayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="63dp"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="18dp"
        android:padding="10dp"
        android:src="@drawable/correct">

    </ImageView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:id="@+id/contentlayout"

        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:id="@+id/bmidisplay"
            android:text="22">

        </TextView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:layout_marginTop="15dp"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_below="@id/bmidisplay"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:id="@+id/genderdisplay" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_bmi_category_is"
            android:textStyle="bold"
            android:id="@+id/bmicategorydispaly"
            android:textColor="@color/black"
            android:fontFamily="@font/adambolds"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/genderdisplay"
            android:textSize="25sp">

        </TextView>

    </RelativeLayout>

    <android.widget.Button
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:id="@+id/gotomain"
        android:layout_below="@id/contentlayout"
        android:layout_marginTop="50dp"
        android:background="@color/teal_700"
        android:text="@string/recalculate_your_bmi"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:fontFamily="@font/adambolds"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

    </android.widget.Button>


</RelativeLayout>